--- a/front_end/package.json
+++ b/front_end/package.json
@@ -4,10 +4,23 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "filepond": "^4.7.3",
+    "filepond-plugin-image-preview": "^4.5.0",
+    "glyphicons": "^0.2.0",
     "material-ui": "^0.20.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-filepond": "^7.0.1",
+    "react-icons": "^3.8.0",
+    "react-modal-image": "^2.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
+    "recharts": "^1.8.5",
+    "semantic-ui-react": "^0.88.1",
+    "sweetalert2": "^8.18.6"
   },
   "scripts": {
     "start": "react-scripts start",
